tests/types_first_dependents/types_first_dependents.exp

Server should start in fs lazy mode and in types-first mode
No errors!

The Flow server is currently in lazy mode and is only checking 1/5 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Warm up cyclic dependencies
Error ---------------------------------------------------------------------------------------------------- mixed.js:3:15

Invalid trivially recursive definition of `Bar`.  [recursive-definition]

   3| import type { Bar } from './types';
                    ^^^



Found 1 error

The Flow server is currently in lazy mode and is only checking 5/5 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Editing a file should cause dependents to pull in dependencies in the same cycle
Error ---------------------------------------------------------------------------------------------------- mixed.js:3:15

Invalid trivially recursive definition of `Bar`.  [recursive-definition]

   3| import type { Bar } from './types';
                    ^^^



Found 1 error

The Flow server is currently in lazy mode and is only checking 5/5 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
